--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		
 		<div class="sub-part-row">
 		
-		<div class="container-item whoami myFont"><h1 class="heading">WHO AM I ?</h1><div class="text">First of all I am a learner then I am a BTECH engineering currently persuing final year student studying in University of Engineering and Management Jaipur.My future goals include machine learning or AI after Web development.</div><div class="button"><button> Know more </button></div>
+		<div class="container-item whoami myFont"><h1 class="heading">WHO AM I ?</h1><div class="text">First of all I am a learner then I am a BTECH engineer currently persuing final year, studying in University of Engineering and Management Jaipur.My future goals include machine learning or AI after Web development.</div><div class="button"><button> Know more </button></div>
 		</div>
      
 		<div class="aboutme"><img src="anuragB&W.jpg" class="image-size">
